compiler/y.output
Terminaux inutilisés dans la grammaire

   tFLOAT
   tDOUBLE
   tOR
   tAND
   tDIFF


Grammaire

    0 $accept: Start $end

    1 Start: Fonctions

    2 Fonctions: Fonction Fonctions
    3          | Main

    4 $@1: %empty

    5 Fonction: tINT tID tPAR_L $@1 Params tPAR_R ContentFonction

    6 Params: ListeParams
    7       | %empty

    8 $@2: %empty

    9 ListeParams: tINT tID tCOMA $@2 ListeParams
   10            | tINT tID

   11 Arguments: SuiteArguments
   12          | %empty

   13 SuiteArguments: Expression tCOMA SuiteArguments
   14               | Expression

   15 ContentFonction: tACC_L Declarations InstructionsFonc tACC_R

   16 InstructionsFonc: InstructionFonc InstructionsFonc
   17                 | InstructionFonc

   18 InstructionFonc: Instruction
   19                | tRETURN Expression tBRK_PT

   20 Instruction: Expression tBRK_PT
   21            | Print tBRK_PT
   22            | If
   23            | While

   24 $@3: %empty

   25 Main: tINT tMAIN tPAR_L tPAR_R tACC_L $@3 Declarations Instructions tACC_R

   26 Declarations: tCONST tINT ListeDeclarationConst tBRK_PT Declarations
   27             | tINT ListeDeclaration tBRK_PT Declarations
   28             | %empty

   29 ListeDeclarationConst: DeclarationConst tCOMA ListeDeclarationConst
   30                      | DeclarationConst

   31 DeclarationConst: tID

   32 $@4: %empty

   33 DeclarationConst: tID $@4 tAFFECT Expression
   34                 | %empty

   35 ListeDeclaration: Declaration tCOMA ListeDeclaration
   36                 | Declaration

   37 Declaration: tID

   38 $@5: %empty

   39 Declaration: tID $@5 tAFFECT Expression
   40            | tMULT tID

   41 $@6: %empty

   42 Declaration: tMULT tID $@6 tAFFECT Expression

   43 $@7: %empty

   44 Declaration: tID $@7 tL_BRCK tNUMBER tR_BRCK

   45 ConditionIf: Condition

   46 If: tIF ConditionIf tACC_L Declarations Instructions tACC_R

   47 $@8: %empty

   48 If: tIF ConditionIf tACC_L Declarations Instructions tACC_R $@8 tELSE tACC_L Declarations Instructions tACC_R

   49 $@9: %empty

   50 While: tWHILE Condition $@9 tACC_L Declarations Instructions tACC_R

   51 Condition: tPAR_L Expression tINF Expression tPAR_R
   52          | tPAR_L Expression tINF tAFFECT Expression tPAR_R
   53          | tPAR_L Expression tSUP Expression tPAR_R
   54          | tPAR_L Expression tSUP tAFFECT Expression tPAR_R
   55          | tPAR_L Expression tEQUALS Expression tPAR_R
   56          | tPAR_L Expression tINF tSUP Expression tPAR_R
   57          | tPAR_L tNOT Expression tPAR_R

   58 Instructions: Instruction Instructions
   59             | %empty

   60 Print: tPRINT tPAR_L Expression tPAR_R

   61 Expression: Expression tPLUS Expression
   62           | Expression tMINUS Expression
   63           | Expression tMULT Expression
   64           | Expression tDIV Expression
   65           | tPAR_L Expression tPAR_R
   66           | tID tAFFECT Expression
   67           | tMULT tID tAFFECT Expression
   68           | tID tL_BRCK tNUMBER tR_BRCK tAFFECT Expression
   69           | tID
   70           | tMULT tID
   71           | tADDR tID
   72           | tID tL_BRCK tNUMBER tR_BRCK
   73           | tNUMBER
   74           | tID tPAR_L Arguments tPAR_R


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 25
tRETURN (259) 19
tPRINT (260) 60
tIF (261) 46 48
tELSE (262) 48
tWHILE (263) 50
tINT (264) 5 9 10 25 26 27
tFLOAT (265)
tDOUBLE (266)
tCONST (267) 26
tACC_L (268) 15 25 46 48 50
tACC_R (269) 15 25 46 48 50
tOR (270)
tAND (271)
tEQUALS (272) 55
tDIFF (273)
tPLUS (274) 61
tMINUS (275) 62
tMULT (276) 40 42 63 67 70
tDIV (277) 64
tAFFECT (278) 33 39 42 52 54 66 67 68
tPAR_L (279) 5 25 51 52 53 54 55 56 57 60 65 74
tPAR_R (280) 5 25 51 52 53 54 55 56 57 60 65 74
tCOMA (281) 9 13 29 35
tBRK_PT (282) 19 20 21 26 27
tADDR (283) 71
tL_BRCK (284) 44 68 72
tR_BRCK (285) 44 68 72
tID (286) 5 9 10 31 33 37 39 40 42 44 66 67 68 69 70 71 72 74
tNUMBER (287) 44 68 72 73
tINF (288) 51 52 56
tSUP (289) 53 54 56
tNOT (290) 57
tIFX (291)


Non-terminaux, suivis des règles où ils apparaissent

$accept (37)
    à gauche: 0
Start (38)
    à gauche: 1, à droite: 0
Fonctions (39)
    à gauche: 2 3, à droite: 1 2
Fonction (40)
    à gauche: 5, à droite: 2
$@1 (41)
    à gauche: 4, à droite: 5
Params (42)
    à gauche: 6 7, à droite: 5
ListeParams (43)
    à gauche: 9 10, à droite: 6 9
$@2 (44)
    à gauche: 8, à droite: 9
Arguments (45)
    à gauche: 11 12, à droite: 74
SuiteArguments (46)
    à gauche: 13 14, à droite: 11 13
ContentFonction (47)
    à gauche: 15, à droite: 5
InstructionsFonc (48)
    à gauche: 16 17, à droite: 15 16
InstructionFonc (49)
    à gauche: 18 19, à droite: 16 17
Instruction (50)
    à gauche: 20 21 22 23, à droite: 18 58
Main (51)
    à gauche: 25, à droite: 3
$@3 (52)
    à gauche: 24, à droite: 25
Declarations (53)
    à gauche: 26 27 28, à droite: 15 25 26 27 46 48 50
ListeDeclarationConst (54)
    à gauche: 29 30, à droite: 26 29
DeclarationConst (55)
    à gauche: 31 33 34, à droite: 29 30
$@4 (56)
    à gauche: 32, à droite: 33
ListeDeclaration (57)
    à gauche: 35 36, à droite: 27 35
Declaration (58)
    à gauche: 37 39 40 42 44, à droite: 35 36
$@5 (59)
    à gauche: 38, à droite: 39
$@6 (60)
    à gauche: 41, à droite: 42
$@7 (61)
    à gauche: 43, à droite: 44
ConditionIf (62)
    à gauche: 45, à droite: 46 48
If (63)
    à gauche: 46 48, à droite: 22
$@8 (64)
    à gauche: 47, à droite: 48
While (65)
    à gauche: 50, à droite: 23
$@9 (66)
    à gauche: 49, à droite: 50
Condition (67)
    à gauche: 51 52 53 54 55 56 57, à droite: 45 50
Instructions (68)
    à gauche: 58 59, à droite: 25 46 48 50 58
Print (69)
    à gauche: 60, à droite: 21
Expression (70)
    à gauche: 61 62 63 64 65 66 67 68 69 70 71 72 73 74, à droite:
    13 14 19 20 33 39 42 51 52 53 54 55 56 57 60 61 62 63 64 65 66
    67 68


État 0

    0 $accept: . Start $end

    tINT  décalage et aller à l'état 1

    Start      aller à l'état 2
    Fonctions  aller à l'état 3
    Fonction   aller à l'état 4
    Main       aller à l'état 5


État 1

    5 Fonction: tINT . tID tPAR_L $@1 Params tPAR_R ContentFonction
   25 Main: tINT . tMAIN tPAR_L tPAR_R tACC_L $@3 Declarations Instructions tACC_R

    tMAIN  décalage et aller à l'état 6
    tID    décalage et aller à l'état 7


État 2

    0 $accept: Start . $end

    $end  décalage et aller à l'état 8


État 3

    1 Start: Fonctions .

    $défaut  réduction par utilisation de la règle 1 (Start)


État 4

    2 Fonctions: Fonction . Fonctions

    tINT  décalage et aller à l'état 1

    Fonctions  aller à l'état 9
    Fonction   aller à l'état 4
    Main       aller à l'état 5


État 5

    3 Fonctions: Main .

    $défaut  réduction par utilisation de la règle 3 (Fonctions)


État 6

   25 Main: tINT tMAIN . tPAR_L tPAR_R tACC_L $@3 Declarations Instructions tACC_R

    tPAR_L  décalage et aller à l'état 10


État 7

    5 Fonction: tINT tID . tPAR_L $@1 Params tPAR_R ContentFonction

    tPAR_L  décalage et aller à l'état 11


État 8

    0 $accept: Start $end .

    $défaut  accepter


État 9

    2 Fonctions: Fonction Fonctions .

    $défaut  réduction par utilisation de la règle 2 (Fonctions)


État 10

   25 Main: tINT tMAIN tPAR_L . tPAR_R tACC_L $@3 Declarations Instructions tACC_R

    tPAR_R  décalage et aller à l'état 12


État 11

    5 Fonction: tINT tID tPAR_L . $@1 Params tPAR_R ContentFonction

    $défaut  réduction par utilisation de la règle 4 ($@1)

    $@1  aller à l'état 13


État 12

   25 Main: tINT tMAIN tPAR_L tPAR_R . tACC_L $@3 Declarations Instructions tACC_R

    tACC_L  décalage et aller à l'état 14


État 13

    5 Fonction: tINT tID tPAR_L $@1 . Params tPAR_R ContentFonction

    tINT  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 7 (Params)

    Params       aller à l'état 16
    ListeParams  aller à l'état 17


État 14

   25 Main: tINT tMAIN tPAR_L tPAR_R tACC_L . $@3 Declarations Instructions tACC_R

    $défaut  réduction par utilisation de la règle 24 ($@3)

    $@3  aller à l'état 18


État 15

    9 ListeParams: tINT . tID tCOMA $@2 ListeParams
   10            | tINT . tID

    tID  décalage et aller à l'état 19


État 16

    5 Fonction: tINT tID tPAR_L $@1 Params . tPAR_R ContentFonction

    tPAR_R  décalage et aller à l'état 20


État 17

    6 Params: ListeParams .

    $défaut  réduction par utilisation de la règle 6 (Params)


État 18

   25 Main: tINT tMAIN tPAR_L tPAR_R tACC_L $@3 . Declarations Instructions tACC_R

    tINT    décalage et aller à l'état 21
    tCONST  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 28 (Declarations)

    Declarations  aller à l'état 23


État 19

    9 ListeParams: tINT tID . tCOMA $@2 ListeParams
   10            | tINT tID .

    tCOMA  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 10 (ListeParams)


État 20

    5 Fonction: tINT tID tPAR_L $@1 Params tPAR_R . ContentFonction

    tACC_L  décalage et aller à l'état 25

    ContentFonction  aller à l'état 26


État 21

   27 Declarations: tINT . ListeDeclaration tBRK_PT Declarations

    tMULT  décalage et aller à l'état 27
    tID    décalage et aller à l'état 28

    ListeDeclaration  aller à l'état 29
    Declaration       aller à l'état 30


État 22

   26 Declarations: tCONST . tINT ListeDeclarationConst tBRK_PT Declarations

    tINT  décalage et aller à l'état 31


État 23

   25 Main: tINT tMAIN tPAR_L tPAR_R tACC_L $@3 Declarations . Instructions tACC_R

    tPRINT   décalage et aller à l'état 32
    tIF      décalage et aller à l'état 33
    tWHILE   décalage et aller à l'état 34
    tMULT    décalage et aller à l'état 35
    tPAR_L   décalage et aller à l'état 36
    tADDR    décalage et aller à l'état 37
    tID      décalage et aller à l'état 38
    tNUMBER  décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 59 (Instructions)

    Instruction   aller à l'état 40
    If            aller à l'état 41
    While         aller à l'état 42
    Instructions  aller à l'état 43
    Print         aller à l'état 44
    Expression    aller à l'état 45


État 24

    9 ListeParams: tINT tID tCOMA . $@2 ListeParams

    $défaut  réduction par utilisation de la règle 8 ($@2)

    $@2  aller à l'état 46


État 25

   15 ContentFonction: tACC_L . Declarations InstructionsFonc tACC_R

    tINT    décalage et aller à l'état 21
    tCONST  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 28 (Declarations)

    Declarations  aller à l'état 47


État 26

    5 Fonction: tINT tID tPAR_L $@1 Params tPAR_R ContentFonction .

    $défaut  réduction par utilisation de la règle 5 (Fonction)


État 27

   40 Declaration: tMULT . tID
   42            | tMULT . tID $@6 tAFFECT Expression

    tID  décalage et aller à l'état 48


État 28

   37 Declaration: tID .
   39            | tID . $@5 tAFFECT Expression
   44            | tID . $@7 tL_BRCK tNUMBER tR_BRCK

    tAFFECT   réduction par utilisation de la règle 38 ($@5)
    tL_BRCK   réduction par utilisation de la règle 43 ($@7)
    $défaut  réduction par utilisation de la règle 37 (Declaration)

    $@5  aller à l'état 49
    $@7  aller à l'état 50


État 29

   27 Declarations: tINT ListeDeclaration . tBRK_PT Declarations

    tBRK_PT  décalage et aller à l'état 51


État 30

   35 ListeDeclaration: Declaration . tCOMA ListeDeclaration
   36                 | Declaration .

    tCOMA  décalage et aller à l'état 52

    $défaut  réduction par utilisation de la règle 36 (ListeDeclaration)


État 31

   26 Declarations: tCONST tINT . ListeDeclarationConst tBRK_PT Declarations

    tID  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 34 (DeclarationConst)

    ListeDeclarationConst  aller à l'état 54
    DeclarationConst       aller à l'état 55


État 32

   60 Print: tPRINT . tPAR_L Expression tPAR_R

    tPAR_L  décalage et aller à l'état 56


État 33

   46 If: tIF . ConditionIf tACC_L Declarations Instructions tACC_R
   48   | tIF . ConditionIf tACC_L Declarations Instructions tACC_R $@8 tELSE tACC_L Declarations Instructions tACC_R

    tPAR_L  décalage et aller à l'état 57

    ConditionIf  aller à l'état 58
    Condition    aller à l'état 59


État 34

   50 While: tWHILE . Condition $@9 tACC_L Declarations Instructions tACC_R

    tPAR_L  décalage et aller à l'état 57

    Condition  aller à l'état 60


État 35

   67 Expression: tMULT . tID tAFFECT Expression
   70           | tMULT . tID

    tID  décalage et aller à l'état 61


État 36

   65 Expression: tPAR_L . Expression tPAR_R

    tMULT    décalage et aller à l'état 35
    tPAR_L   décalage et aller à l'état 36
    tADDR    décalage et aller à l'état 37
    tID      décalage et aller à l'état 38
    tNUMBER  décalage et aller à l'état 39

    Expression  aller à l'état 62


État 37

   71 Expression: tADDR . tID

    tID  décalage et aller à l'état 63


État 38

   66 Expression: tID . tAFFECT Expression
   68           | tID . tL_BRCK tNUMBER tR_BRCK tAFFECT Expression
   69           | tID .
   72           | tID . tL_BRCK tNUMBER tR_BRCK
   74           | tID . tPAR_L Arguments tPAR_R

    tAFFECT  décalage et aller à l'état 64
    tPAR_L   décalage et aller à l'état 65
    tL_BRCK  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 69 (Expression)


État 39

   73 Expression: tNUMBER .

    $défaut  réduction par utilisation de la règle 73 (Expression)


État 40

   58 Instructions: Instruction . Instructions

    tPRINT   décalage et aller à l'état 32
    tIF      décalage et aller à l'état 33
    tWHILE   décalage et aller à l'état 34
    tMULT    décalage et aller à l'état 35
    tPAR_L   décalage et aller à l'état 36
    tADDR    décalage et aller à l'état 37
    tID      décalage et aller à l'état 38
    tNUMBER  décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 59 (Instructions)

    Instruction   aller à l'état 40
    If            aller à l'état 41
    While         aller à l'état 42
    Instructions  aller à l'état 67
    Print         aller à l'état 44
    Expression    aller à l'état 45


État 41

   22 Instruction: If .

    $défaut  réduction par utilisation de la règle 22 (Instruction)


État 42

   23 Instruction: While .

    $défaut  réduction par utilisation de la règle 23 (Instruction)


État 43

   25 Main: tINT tMAIN tPAR_L tPAR_R tACC_L $@3 Declarations Instructions . tACC_R

    tACC_R  décalage et aller à l'état 68


État 44

   21 Instruction: Print . tBRK_PT

    tBRK_PT  décalage et aller à l'état 69


État 45

   20 Instruction: Expression . tBRK_PT
   61 Expression: Expression . tPLUS Expression
   62           | Expression . tMINUS Expression
   63           | Expression . tMULT Expression
   64           | Expression . tDIV Expression

    tPLUS    décalage et aller à l'état 70
    tMINUS   décalage et aller à l'état 71
    tMULT    décalage et aller à l'état 72
    tDIV     décalage et aller à l'état 73
    tBRK_PT  décalage et aller à l'état 74


État 46

    9 ListeParams: tINT tID tCOMA $@2 . ListeParams

    tINT  décalage et aller à l'état 15

    ListeParams  aller à l'état 75


État 47

   15 ContentFonction: tACC_L Declarations . InstructionsFonc tACC_R

    tRETURN  décalage et aller à l'état 76
    tPRINT   décalage et aller à l'état 32
    tIF      décalage et aller à l'état 33
    tWHILE   décalage et aller à l'état 34
    tMULT    décalage et aller à l'état 35
    tPAR_L   décalage et aller à l'état 36
    tADDR    décalage et aller à l'état 37
    tID      décalage et aller à l'état 38
    tNUMBER  décalage et aller à l'état 39

    InstructionsFonc  aller à l'état 77
    InstructionFonc   aller à l'état 78
    Instruction       aller à l'état 79
    If                aller à l'état 41
    While             aller à l'état 42
    Print             aller à l'état 44
    Expression        aller à l'état 45


État 48

   40 Declaration: tMULT tID .
   42            | tMULT tID . $@6 tAFFECT Expression

    tAFFECT   réduction par utilisation de la règle 41 ($@6)
    $défaut  réduction par utilisation de la règle 40 (Declaration)

    $@6  aller à l'état 80


État 49

   39 Declaration: tID $@5 . tAFFECT Expression

    tAFFECT  décalage et aller à l'état 81


État 50

   44 Declaration: tID $@7 . tL_BRCK tNUMBER tR_BRCK

    tL_BRCK  décalage et aller à l'état 82


État 51

   27 Declarations: tINT ListeDeclaration tBRK_PT . Declarations

    tINT    décalage et aller à l'état 21
    tCONST  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 28 (Declarations)

    Declarations  aller à l'état 83


État 52

   35 ListeDeclaration: Declaration tCOMA . ListeDeclaration

    tMULT  décalage et aller à l'état 27
    tID    décalage et aller à l'état 28

    ListeDeclaration  aller à l'état 84
    Declaration       aller à l'état 30


État 53

   31 DeclarationConst: tID .
   33                 | tID . $@4 tAFFECT Expression

    tAFFECT   réduction par utilisation de la règle 32 ($@4)
    $défaut  réduction par utilisation de la règle 31 (DeclarationConst)

    $@4  aller à l'état 85


État 54

   26 Declarations: tCONST tINT ListeDeclarationConst . tBRK_PT Declarations

    tBRK_PT  décalage et aller à l'état 86


État 55

   29 ListeDeclarationConst: DeclarationConst . tCOMA ListeDeclarationConst
   30                      | DeclarationConst .

    tCOMA  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 30 (ListeDeclarationConst)


État 56

   60 Print: tPRINT tPAR_L . Expression tPAR_R

    tMULT    décalage et aller à l'état 35
    tPAR_L   décalage et aller à l'état 36
    tADDR    décalage et aller à l'état 37
    tID      décalage et aller à l'état 38
    tNUMBER  décalage et aller à l'état 39

    Expression  aller à l'état 88


État 57

   51 Condition: tPAR_L . Expression tINF Expression tPAR_R
   52          | tPAR_L . Expression tINF tAFFECT Expression tPAR_R
   53          | tPAR_L . Expression tSUP Expression tPAR_R
   54          | tPAR_L . Expression tSUP tAFFECT Expression tPAR_R
   55          | tPAR_L . Expression tEQUALS Expression tPAR_R
   56          | tPAR_L . Expression tINF tSUP Expression tPAR_R
   57          | tPAR_L . tNOT Expression tPAR_R

    tMULT    décalage et aller à l'état 35
    tPAR_L   décalage et aller à l'état 36
    tADDR    décalage et aller à l'état 37
    tID      décalage et aller à l'état 38
    tNUMBER  décalage et aller à l'état 39
    tNOT     décalage et aller à l'état 89

    Expression  aller à l'état 90


État 58

   46 If: tIF ConditionIf . tACC_L Declarations Instructions tACC_R
   48   | tIF ConditionIf . tACC_L Declarations Instructions tACC_R $@8 tELSE tACC_L Declarations Instructions tACC_R

    tACC_L  décalage et aller à l'état 91


État 59

   45 ConditionIf: Condition .

    $défaut  réduction par utilisation de la règle 45 (ConditionIf)


État 60

   50 While: tWHILE Condition . $@9 tACC_L Declarations Instructions tACC_R

    $défaut  réduction par utilisation de la règle 49 ($@9)

    $@9  aller à l'état 92


État 61

   67 Expression: tMULT tID . tAFFECT Expression
   70           | tMULT tID .

    tAFFECT  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 70 (Expression)


État 62

   61 Expression: Expression . tPLUS Expression
   62           | Expression . tMINUS Expression
   63           | Expression . tMULT Expression
   64           | Expression . tDIV Expression
   65           | tPAR_L Expression . tPAR_R

    tPLUS   décalage et aller à l'état 70
    tMINUS  décalage et aller à l'état 71
    tMULT   décalage et aller à l'état 72
    tDIV    décalage et aller à l'état 73
    tPAR_R  décalage et aller à l'état 94


État 63

   71 Expression: tADDR tID .

    $défaut  réduction par utilisation de la règle 71 (Expression)


État 64

   66 Expression: tID tAFFECT . Expression

    tMULT    décalage et aller à l'état 35
    tPAR_L   décalage et aller à l'état 36
    tADDR    décalage et aller à l'état 37
    tID      décalage et aller à l'état 38
    tNUMBER  décalage et aller à l'état 39

    Expression  aller à l'état 95


État 65

   74 Expression: tID tPAR_L . Arguments tPAR_R

    tMULT    décalage et aller à l'état 35
    tPAR_L   décalage et aller à l'état 36
    tADDR    décalage et aller à l'état 37
    tID      décalage et aller à l'état 38
    tNUMBER  décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 12 (Arguments)

    Arguments       aller à l'état 96
    SuiteArguments  aller à l'état 97
    Expression      aller à l'état 98


État 66

   68 Expression: tID tL_BRCK . tNUMBER tR_BRCK tAFFECT Expression
   72           | tID tL_BRCK . tNUMBER tR_BRCK

    tNUMBER  décalage et aller à l'état 99


État 67

   58 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 58 (Instructions)


État 68

   25 Main: tINT tMAIN tPAR_L tPAR_R tACC_L $@3 Declarations Instructions tACC_R .

    $défaut  réduction par utilisation de la règle 25 (Main)


État 69

   21 Instruction: Print tBRK_PT .

    $défaut  réduction par utilisation de la règle 21 (Instruction)


État 70

   61 Expression: Expression tPLUS . Expression
